--- a/lovskov.html
+++ b/lovskov.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="lovskov.css">
     <link rel="stylesheet" href="nav.css">
 
-    <!-- Link til fonte -->
+    <!-- Link til fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/ade8bsy.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
